# korean_dict

./: .dockerignore  .fuse_hidden000354ea000004f9  .fuse_hidden000396ad000004fa  .fuse_hidden000396ae000004fb  .gitignore  Cargo.toml  Dockerfile  README.md  dev.sh  docker-compose.yml  index.py  koreanDict.py  krdict.crt  krdict.pem  parser.py  prod.sh  requirements.txt  setup.cfg  testSSL.py
.github/workflows/: rust.yml
certs/: krdict.pem
docker/: Dockerfile
frontend/: Cargo.toml  index.html  styles.css
frontend/src/: main.rs
frontend/src/components/: file_uploader.rs  mod.rs  sentence_viewer.rs
htmx-frontend/: index.html
migrations/: 20230913154751_srt.sql  20230913182446_subtitles.sql  20230913185635_words.sql  20230915153519_csv.sql  20230915153605_csv_row.sql  20230916040704_sentence_words.sql  20231002032905_flashcard_entries.sql
python_src/koreanDict/: csvParser.py  parser.py  search.py  timePass.py
resources/: bite_sisters.tsv  test.srt  test.tsv  test2.tsv
resources/certs/: cacert.pem
server/: Cargo.toml
server/py/: khaiii_parser.py  komoran_parser.py
server/src/: csv_parser.rs  lib.rs  main.rs  parser.rs  search.rs
src/: csv_parser.rs  lib.rs  main.rs  parser.rs  search.rs  srt_parser.rs
src/koreanDict/: csvParser.py  koreanDictApi.py  parser.py  search.py
src/routes/: csv_processing.rs  error.rs  index.rs  mod.rs  templates.rs  views.rs
templates/: base.html  flashcard_entry_form.html  index.html  sentence_viewer.html  view.html
tests/: test.py
