[package]
name = "korean_dict"
version = "0.1.0"
authors = ["Chris Hoskin <chris.hoskin2355@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
futures = "0.3"                                    # for our async / await blocks
tokio = { version = "1", features = ["full"] }     # for our async runtime
roxmltree = "0.14"
csv = "1.1.6"
serde = { version = "1.0", features = ["derive"] }

[dependencies.pyo3]
version = "0.16.5"
features = ["auto-initialize"]

[dev-dependencies]
serial_test = "0.7"
