[metadata]
name = koreanDict
description = parses korean sentence and gives dictionary entries for words
author = Chris Hoskin
license = GPLV3
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    
    [options]
    packages =
        korean dict
    install_requires =
        aiohttp>=3.8
        asyncio>=3.4
        certifi>=2021.10
        konlpy>=0.6
        prettyprint>=0.1.5
        pyOpenSSL >=22
    python_requires = >=3.6
    package_dir =
        =src
    zip_safe = no

    [options.package_data]
    slapping = py.typed
        
