[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
console_error_panic_hook = "0.1.7"
gloo = "0.8.0"
gloo-net = "0.2.6"
js-sys = "0.3.61"
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
serde_json = "1.0.94"

[dependencies.web-sys]
version = "0.3.61"
features = ["File", "DragEvent", "DataTransfer"]

